--- a/Reso/Reso/CreatePoll.storyboard
+++ b/Reso/Reso/CreatePoll.storyboard
@@ -132,7 +132,7 @@
                                                 <constraint firstAttribute="width" secondItem="4di-8P-vBq" secondAttribute="height" multiplier="1:1" id="Xj3-TW-cy5"/>
                                             </constraints>
                                         </imageView>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Option title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1vr-5n-u51">
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Option name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1vr-5n-u51">
                                             <rect key="frame" x="68" y="7" width="504" height="30"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
@@ -183,7 +183,7 @@
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </tableViewCell>
-                            <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="addMemberCell" id="sjK-Yo-nO9" customClass="AddMemberTableViewCell" customModule="Reso" customModuleProvider="target">
+                            <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="addMemberCell" id="sjK-Yo-nO9" customClass="AddMemberTableViewCell" customModule="Reso" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="312" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sjK-Yo-nO9" id="1lg-2W-w0c">
@@ -191,8 +191,13 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JIs-3t-Hrm">
-                                            <rect key="frame" x="252" y="8" width="96" height="28"/>
-                                            <state key="normal" title="Add Members"/>
+                                            <rect key="frame" x="245" y="8" width="110" height="28"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="110" id="W24-X2-sdA"/>
+                                            </constraints>
+                                            <state key="normal" title="Add Members">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
                                             <connections>
                                                 <action selector="addMemberTapped:" destination="sjK-Yo-nO9" eventType="touchUpInside" id="CfS-lc-HuS"/>
                                                 <segue destination="QqT-yz-G3A" kind="show" identifier="toAddMembers" id="BLK-DX-toL"/>
@@ -206,6 +211,9 @@
                                         <constraint firstItem="JIs-3t-Hrm" firstAttribute="centerX" secondItem="1lg-2W-w0c" secondAttribute="centerX" id="rgQ-TS-kKj"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="addMemberButton" destination="JIs-3t-Hrm" id="Zhc-uX-KUs"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -248,7 +256,7 @@
                                         <barButtonItem style="plain" systemItem="flexibleSpace" id="CLB-Ut-vCE"/>
                                         <barButtonItem title="Done" id="lfc-e9-2qe">
                                             <connections>
-                                                <action selector="pickerViewDoneButtonTapped:" destination="jmn-9Z-NcF" id="tgt-ha-6SW"/>
+                                                <action selector="datePickerDoneTapped:" destination="jmn-9Z-NcF" id="LPU-Fd-eU4"/>
                                             </connections>
                                         </barButtonItem>
                                     </items>
