--- a/Reso/Reso/Detail.storyboard
+++ b/Reso/Reso/Detail.storyboard
@@ -93,22 +93,22 @@
                                                                             </constraints>
                                                                         </imageView>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDU-bv-eH1" userLabel="userNameLabel">
-                                                                            <rect key="frame" x="58" y="10" width="250" height="20"/>
+                                                                            <rect key="frame" x="58" y="5" width="250" height="20"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="250" id="aUF-yY-uok"/>
                                                                                 <constraint firstAttribute="height" constant="20" id="lhK-hl-5EQ"/>
                                                                             </constraints>
-                                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oek-Mb-NHY" userLabel="userCommentLabel">
-                                                                            <rect key="frame" x="63" y="30" width="250" height="20"/>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oek-Mb-NHY" userLabel="userCommentLabel">
+                                                                            <rect key="frame" x="63" y="25" width="250" height="20"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="height" constant="20" id="6u2-gb-elF"/>
                                                                                 <constraint firstAttribute="width" constant="250" id="nyA-PM-wNC"/>
                                                                             </constraints>
-                                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="13"/>
                                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
@@ -120,7 +120,7 @@
                                                                         <constraint firstItem="MDU-bv-eH1" firstAttribute="leading" secondItem="iXw-9L-wyS" secondAttribute="trailing" constant="10" id="b6h-r8-2TC"/>
                                                                         <constraint firstItem="iXw-9L-wyS" firstAttribute="centerY" secondItem="Sg1-Gy-Hx0" secondAttribute="centerY" id="bOA-02-0br"/>
                                                                         <constraint firstItem="Oek-Mb-NHY" firstAttribute="top" secondItem="MDU-bv-eH1" secondAttribute="bottom" id="ciW-UO-Llg"/>
-                                                                        <constraint firstItem="MDU-bv-eH1" firstAttribute="top" secondItem="Sg1-Gy-Hx0" secondAttribute="top" constant="10" id="tTQ-ai-idl"/>
+                                                                        <constraint firstItem="MDU-bv-eH1" firstAttribute="top" secondItem="Sg1-Gy-Hx0" secondAttribute="top" constant="5" id="tTQ-ai-idl"/>
                                                                     </constraints>
                                                                 </tableViewCellContentView>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
